downgrade some js to support older browsers

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,16 @@
 {
   "presets": [
     [
-      "es2015",
-      {
+      "env", {
+      "targets": {
+        "browsers": ["last 2 versions", "safari >= 9"]
+      },
         "modules": false
       }
+
     ]
   ],
   "plugins": [
     "external-helpers"
-  ],
+  ]
 }
