--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "d3": "^4.13.0",
     "eslint-config-google": "^0.9.1",
     "material-components-web": "^0.34.1",
